--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,9 +1,18 @@
-li {
-    list-style-type: none;
+p {
+    word-break: break-all;
 }
-#times li {
-    padding: 2.5px;
+
+input {
+    border: none;
+    max-width: 150px;
 }
+
+@media screen and (max-width: 700px) {
+    input {
+        max-width: 70px;
+    }
+}
+
 
 .borders {
     border: solid 1px black;
@@ -22,6 +31,4 @@ li {
     background-color: lightblue;
 }
 
-input {
-    border: none;
-}
+
